aws_sec_grp.tf
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh-sg-${terraform.workspace}"
  description = "An ssh sec grp."
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    description = "inbound 22"
  }
  egress {
    description = "All outbound"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
####################################

resource "aws_security_group" "vpc-web" {
  name        = "vpc-web-sg-${terraform.workspace}"
  description = "An http sec grp."
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    description = "inbound 80"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    description = "inbound 80"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    description = "inbound 443"
  }
  egress {
    description = "All outbound"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
